@startuml
entity "USERS" {
+id: BIGINT <<PK>>
*name: VARCHAR(255)
*email: VARCHAR(255)
*password: VARCHAR(255)
*auth_provider: VARCHAR(255)
*role_id: INTEGER <<FK>>
*create_at: DATETIME(6)
*update_at: DATETIME(6)
*is_active: BIT(1)
*phone: VARCHAR(255) 
*address: VARCHAR(255)
}
entity "VERIFICATION_CODES" {
  +id: BIGINT <<PK>>
  +user_id: BIGINT <<FK>>
  *create_at: DATETIME(6)
  *expire_at: DATETIME(6)
  *token: VARCHAR(255)
}
USERS "1" -- "0..*" VERIFICATION_CODES : has
entity "ROLES" {
+id: INTEGER <<PK>>
*name: VARCHAR(20)
*description: VARCHAR(255)
}
ROLES "1" --"0..*" USERS : has
entity "RESET_PASSWORD_TOKENS" {
  +id: INTEGER <<PK>>
  +user_id: BIGINT <<FK>>
  *create_at: DATETIME(6)
  *expire_at: DATETIME(6)
  *token: VARCHAR(255)
}
USERS "1" -- "0..*" RESET_PASSWORD_TOKENS : has
entity "CATEGORIES" {
+id: BIGITNT <<PK>>
*name: VARCHAR(255)
*description: VARCHAR(255)
*image: VARCHAR(255)
+parent_id: BIGINT <<FK>>
} 
CATEGORIES "0" --"0..*" CATEGORIES: has child
entity "PRODUCTS" {
+id: BIGINT <<PK>> 
+category_id: BIGINT <<FK>>
*name:VARCHAR(255)
*short_desc: VARCHAR(255)
*detail_desc: VARCHAR(255)
*create_at: DATETIME(6)
*update_at: DATETIME(6)
*rating: FLOAT
*min_price: FLOAT
*max_price: FLOAT,
*quantity:BIGINT,
*sold: BIGINT,
*is_enable:boolean
*image: VARCHAR(255)
*status: INTEGER 
*start_sold: DATE,
*end_sold: DATE
*origin_price:FLOAT
*current_price:FLOAT 
*is_on_sale:BOOLEAN
} 
CATEGORIES "1" -- "0..*" PRODUCTS : has
entity "PRODUCT_VARIANTS" {
  +id: BIGINT <<PK>>
  +color_id: BIGINT<<FK>>
  +size_id: BIGINT <<FK>> 
  *price: FLOAT 
  *quantity: BIGINT
  *image: VARCHAR(255)
  *name: VARCHAR(255)
}
entity "PRODUCT_COLORS" {
  +id: BIGINT<<PK>>
  *color_code: BIGINT
} 
entity "PRODUCT_SIZES" {
  +id: BIGINT<<PK>> 
  *size_code: BIGINT 
}  
PRODUCTS "1" --"0..*" PRODUCT_VARIANTS: has variant
PRODUCT_COLORS "1" -- "0..*" PRODUCT_VARIANTS: has 
PRODUCT_SIZES "1" -- "0..*" PRODUCT_VARIANTS: has


entity "LOG" {
  +id: BIGINT <<FK>>
  *method:VARCHAR(255)
  *url_api: VARCHAR(255) 
  *response_message: VARCHAR(255)
  *code: INTEGER
  *status: VARCHAR(255)
  *create_at: DATETIME(6)
  *user_id: VARCHAR(255)
  *ip: VARCHAR(255)
}




 entity "WISHLIST" { 
 +id: BIGINT <<PK>>
 +user_id: BIGINT<<FK>>
 +product_id : BIGINT <<FK>>
 *create_at: DATETIME(6)
*update_at: DATETIME(6)
 }
 USERS "1" -- "0..*" WISHLIST: has favourite product
 PRODUCTS "1" --"0..*" WISHLIST: in wishlist
 
 entity "CART" {
 +id: BIGINT <<PK>>
 +user_id: BIGINT <<FK>>
 *amount:INTEGER
 *create_at: DATETIME(6)
*update_at: DATETIME(6)
 }
 USERS "1" -- "0..1" CART: has
 entity "CART_ITEMS" { 
 +id: BIGINT <<PK>>
 +cart_id: BIGINT <<FK>>
 +product_variant_id: BIGINT <<FK>>
 *amount:INTEGER
 }
 CART "1" -- "0..*" CART_ITEMS: has
 entity "ORDERS" {
 +id: BIGINT <<PK>>
 +user_id: BIGINT <<FK>>
 *create_at: DATETIME(6)
 *update_at: DATETIME(6)
 *status: VARCHAR(255)
 *shipping_fee: FLOAT
 *total:FLOAT
 *address: VARCHAR(255)
 *phone: VARCHAR(255)
 }
 USERS "1" -- "0..*" ORDERS: order
 entity "ORDER_ITEMS" {
 +id: BIGINT <<PK>>
 +order_id: BIGINT <<FK>>
 +product_variant_id: BIGINT <<FK>>
 *amount: INTEGER
 *total_price: FLOAT
 }
 ORDERS "1" --"1..*" ORDER_ITEMS: has
 PRODUCT_VARIANTS "1" -- "0..*" ORDER_ITEMS: has
 entity "PAYMENTS" { 
 +id: BIGINT <<PK>>
 +order_id: BIGINT <<FK>>
 *currency: VARCHAR(255)
 *total: FLOAT
 *create_at: DATETIME(6)
 *update_at: DATETIME(6)
 *provider: VARCHAR(255)
 *status: VARCHAR(255)
 }
 ORDERS "1" --"0..1" PAYMENTS: has

entity "COUPONS" { 
  +id: BIGINT <<PK>>
  *discount_type:VARCHAR(255)
  +product_id: BIGINT <<FK>>
  *discount: FLOAT
  *create_at: DATETIME(6)
  *update_at: DATETIME(6)
  *start_at: DATETIME(6)
  *end_at: DATETIME(6)
}
PRODUCTS "1" -- "0..*" COUPONS: has

entity "REVIEWS" {
    +id: BIGINT<<PK>>
    +product_id: BIGINT<<FK>>
    +user_id: BIGINT<<FK>>
    *rating: INTEGER
    *content: VARCHAR(255)
    *status: VARCHAR(50) 
    *create_at: DATETIME(6)
    *update_at: DATETIME(6)
    
}

PRODUCTS "1" -- "0..*" REVIEWS: has
USERS "1" -- "0..*" REVIEWS: has
entity "NOTIFICATIONS" {
    +id: BIGINT<<PK>>
    +user_id: BIGINT<<FK>>
    *title: VARCHAR(255)
    *content: VARCHAR(255)
    *status: VARCHAR(50) 
    *create_at:DATETIME(6)
    *update_at:DATETIME(6)
}
USERS "1" --"0..*" NOTIFICATIONS: has
entity "TAGS" {
  +id: BIGINT<<PK>>
  *name: VARCHAR(255) 
  *image: VARCHAR(255)
}
entity "PRODUCT_TAGS" {
  +id: BIGINT<<PK>>
  +product_id: BIGINT<<FK>>
  +tag_id: BIGINT<<FK>>
}
PRODUCTS "1" -- "0..*" PRODUCT_TAGS: has
TAGS "1" -- "0..*" PRODUCT_TAGS: has




@enduml